--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.3
+  toastification: ^1.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
